--- a/frontend-app/src/app/components/login/login.html
+++ b/frontend-app/src/app/components/login/login.html
@@ -55,12 +55,10 @@
     <div class="mt-6 text-center">
       <p class="text-gray-600">
         Pas encore de compte ? 
-        <a  routerLink="/register" class="text-indigo-600 hover:text-indigo-700 font-semibold">
-          S'inscrire
-        </a>
-        <a  href="/register" class="text-indigo-600 hover:text-indigo-700 font-semibold"
+      
+        <a  href="/register"  routerLink="/register" class="text-indigo-600 hover:text-indigo-700 font-semibold"
          >
-          Accueil</a>
+          S'inscrire</a>
       </p>
     </div>
 
